name: entangle
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: COPYRIGHT
data-dir: ""
 
executable entangle
    build-depends: base -any, quipper >=0.7 && <0.8, containers >= 0.5&& <0.6, matrix >=0.3 && <0.4, mtl >=2.1 && <2.2
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: SqMath
    --QMonad.MC QMonad.Quipper QMonad SqMath
 
