name: entangle
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: COPYRIGHT
data-dir: ""
 
executable entangle
    build-depends: base >= 4.0 && <5.0, quipper >=0.7 && <0.9, containers >= 0.5&& <0.6, matrix >=0.3 && <0.5, mtl >=2.1 && <2.3
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules:
    ghc-options: -Wall -fno-warn-type-defaults -fno-warn-unused-do-bind -fprof-auto -fprof-cafs
