name: entangle
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: MIT
license-file: LICENSE
data-dir: ""

library
    hs-source-dirs: src/lib
    build-depends: base >= 4.0 && <5.0, quipper >=0.7 && <0.9, containers >= 0.5&& <0.6, matrix >=0.3 && <0.5, mtl >=2.1 && <2.3
    ghc-options: -Wall -Werror
 -- ghc-options: -Wall -fno-warn-type-defaults -fno-warn-unused-do-bind -fno-warn-orphans -fprof-auto -fprof-cafs -Werror

 
executable entangle
    main-is: Main.hs
    build-depends: base >= 4.0 && <5.0, entangle
    buildable: True
    hs-source-dirs: src/exe
    other-modules:
 -- ghc-options: -Wall -fno-warn-type-defaults -fno-warn-unused-do-bind -fno-warn-orphans -fprof-auto -fprof-cafs -Werror
    ghc-options: -Wall -Werror
